# GreatOCR

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  install.bat  pyproject.toml  start.bat
demo/: GreatOCR_Demo_Script.md
docs/: AGENT_GUIDE.md  TASK_BOARD.md  session-handoff-2026-06-25-v1.md
docs/acceptance/: v1-acceptance-report.md  v1-known-limitations.md  v1-sample-matrix.md  v2-1-reconstruction-report.md  (+1 more)
frontend/: .env.development  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: demo.py  install_frontend.mjs  run_acceptance.py  serve.py
tests/: test_checkpoints.py  test_cli.py  test_critical_fields.py  test_document_model.py  test_docx_assets.py  test_docx_builder.py  test_docx_openability.py  test_docx_tables.py  test_end_to_end_fake_provider.py  test_generic_vision_provider.py  test_layout_order.py  test_mapper_fake.py  test_markdown_export.py  test_mineru_adapter.py  test_mineru_zip_mapper.py  test_no_secret_leakage.py  test_page_geometry.py  test_page_ranges.py  test_paths.py  test_pipeline_model_outputs.py  test_pipeline_parse.py  test_pipeline_quality_report.py  test_pipeline_resume.py  test_preflight.py  test_progress.py  test_provider_contract.py  test_provider_fallback.py  test_provider_registry.py  test_quality_report_docx.py  test_quality_report_json.py  test_release_scripts.py  test_result_versions.py  test_rework.py  test_security.py  test_skill_static.py  test_subset_pdf.py  test_text_cleanup.py  test_text_reasoner.py  test_translation_openai_compatible.py  test_validation_checks.py
(+127 files in other folders)
